@@ -245,7 +245,7 @@ public class GVSubNodeActionFlowCreationTests extends AbstractIntegrationTests {
     public void tearDown() {
         if (this.verifier != null) {
             this.verifier.thenCancel()
-                    .verify(Duration.ofSeconds(1000));
+                    .verify(Duration.ofSeconds(10));
         }
     }
 
